fix: restructure header and logo layout for improved responsiveness and visibility

--- a/style.css
+++ b/style.css
@@ -18,21 +18,32 @@ main {
   max-width: 1440px;
   width: 100%;
   position: relative;
+  top: 100px;
+}
+
+.animation_container {
+  width: 100%;
+  height: 100%;
+  max-width: 1440px;
+  position: relative;
 }
 
 .header_container {
+  position: absolute;
+  top: 0;
+  right: 0;
   height: 100px;
   width: 100%;
   max-width: 1440px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 
 .join_logo{
   position: absolute;
-  top: 50vh; 
-  left: 50vw; 
+  top: 50%; 
+  left: 50%; 
   transform: translate(-50%, -50%) scale(1);
   animation: fadeIn 1000ms ease forwards, moveLogo 2s ease forwards;
   animation-delay: 0ms, 1000ms;
@@ -40,7 +51,7 @@ main {
 }
 
 .join_logo_img {
-  height: 272px;
+  height: 290px;
   padding-top: 24px;
 }
 
@@ -146,10 +157,10 @@ footer a:hover {
       transform: translate(-50%, -50%) scale(1);
     }
     100% {
-      position: relative;
-      top: 0;
-      left: 0;
-      transform: translate(0, 0) scale(0.365);
+      position: absolute;
+      top: -59px;
+      left: 20px;
+      transform: translate(0, 0) scale(0.400);
     }
   }
 
